fix: :bug: Fix width and height issues, fix hash issue on mobile

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -9,11 +9,15 @@
 @use "about";
 @use "articles";
 
+html {
+  height: 100%;
+}
+
 body {
   background: colors.$background;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100%;
   margin: 0;
 }
 
@@ -29,7 +33,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 2rem;
   box-sizing: border-box;
   display: grid;
