--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -6,8 +6,8 @@
 .hero {
   @include utilities.flex-center;
   gap: 3rem;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   z-index: 0;
 
   @media (max-width: breakpoints.$mobile) {
